--- a/Pages/Books/Details.cshtml
+++ b/Pages/Books/Details.cshtml
@@ -35,7 +35,22 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Book.PublishingDate)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Book.Publisher)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Book.Publisher)
+        </dd>
     </dl>
+    <div>
+        <h3>Categories</h3>
+        <ul>
+            @foreach (var category in Model.Book.BookCategories)
+            {
+                <li>@category.Category.CategoryName</li>
+            }
+        </ul>
+    </div>
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Book.ID">Edit</a> |
